--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,13 @@ nav ul li a{
 header{
 	position: relative;
 	height: 600px;
-	background: linear-gradient(to top,#0984e3,transparent 50%),url(http://getwallpapers.com/wallpaper/full/6/6/9/1071943-large-walrus-wallpaper-1920x1200-for-phone.jpg);
+	width: 100%;
+	background:green;
+	/*background:linear-gradient(to top,#0984e3,transparent 50%),url(https://cdn.suwalls.com/wallpapers/animals/walrus-10140-1920x1200.jpg);*/
 	bacrground-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	z-index: -2;
-	width: 100%;
 }
 
 header h2{
