add overflow-x on header

--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,12 @@ header{
 	position: relative;
 	height: 600px;
 	width: 100%;
-	background:green;
 	background:linear-gradient(to top,#0984e3,transparent 50%),url(https://cdn.suwalls.com/wallpapers/animals/walrus-10140-1920x1200.jpg);
 	bacrground-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	z-index: -2;
-	overflow: hidden;
+	overflow-x:hidden;
 }
 
 header h2{
