trying to make mobile friendly

--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,14 @@ nav ul li a{
 
 
 header{
-	position: relative;
-	height: 600px;
 	width: 100%;
+	/*position: relative;*/
+	height: 600px;
 	background:linear-gradient(to top,#0984e3,transparent 50%),url(https://cdn.suwalls.com/wallpapers/animals/walrus-10140-1920x1200.jpg);
 	bacrground-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	z-index: -2;
-	overflow-x:hidden;
 }
 
 header h2{
