--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,8 @@ header{
 	background-position: center;
 	background-size: cover;
 	z-index: -2;
-	left: 0;
 }
-/*
+
 header h2{
 	top:50%;
 	left:50%;
@@ -47,7 +46,7 @@ header h2{
 	color:white;
 	z-index: -1;
 }
-*/
+
 h3{
 	font-size: 2em;
 	text-align: center;
@@ -65,8 +64,10 @@ p{
 	font-family: sans-serif;
 }
 
-section{
+.wrapper{
+	margin: 0 auto;
 	margin: 50px 25% 0 25%;
+	overflow-x: hidden;
 }
 
 table th, table td{
